Alterando index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         .cadastro{
             background-color: black;
-            color: white;
+            color: green;
         }
         form input:hover{
             background-color: grey;
@@ -56,7 +56,7 @@
 
     <footer>
         <p>
-            &copy;FATEC BS Rubens Lara
+            &copy;FATEC BS Rubens Lara Baixada Santista
         </p>
     </footer>
 </body>
